--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -20,6 +20,7 @@ header{
     height: 10vh;
     background-color: var(--main-bg-color);
     font-family: 'Lato', sans-serif;
+    margin-bottom: 10px;
 }
 nav ul li{
     list-style-type: none;
@@ -77,11 +78,10 @@ nav{
     font-family: 'Lato', sans-serif;
     font-weight: bold;
 }
-.slider{
-    display: flex;
-    justify-content: center;
-    margin-top: 15px;
-    overflow: hidden;
+
+.slider img{
+    width: 100%;
+    height: 300px;
 }
 .item-border{
     font-size: 22px;
